# trivia-python

./: README.md  config.py  main.py  pyproject.toml
src/: board.py  dice.py  exceptions.py  game.py  player.py  question.py
tests/: conftest.py  factories.py  test_board.py  test_game_setup.py  test_game_turn.py
