[tool.poetry]
name = "trivia"
version = "0.1.0"
description = ""
authors = ["camillebeguin <camille.beguin@worklife.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
faker = "^30.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
